--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/grill/eclipse-workspace/ServletLogin/WebContent/WEB-INF/lib/mysql-connector-java-8.0.20.jar">
+	<classpathentry kind="lib" path="/Volumes/DD/Java/mysql-connector-java-8.0.20.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
